--- a/test-for-students/index.html
+++ b/test-for-students/index.html
@@ -3,136 +3,84 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>MeBay-Product-Page</title>
         <link href="css/style.css" rel="stylesheet">
     </head>
-    <body>
-        <div id="grid-layout">
-            <div id="header">
-                <h1>
-                    <a href="#">
-                        <span id="me">Me</span><span id="tube">Tube</span>
-                    </a>
-                </h1>
-            </div>
-            <div id="sidebar">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Shorts</a></li>
-                    <li><a href="#">Subscriptions</a></li>
-                </ul>
-                <ul>
-                    <li><a href="#">Library</a></li>
-                    <li><a href="#">History</a></li>
-                    <li><a href="#">Your videos</a></li>
-                    <li><a href="#">Watch Later</a></li>
-                </ul>
-                
-            </div>
-            <div id="main">
-                <div class="metube-item">
-                    <div class="img">
-                        <img 
-                        src="images/mass effect 2.jpg"
-                        alt="mass effect"
-                        >
-                    </div>
-                    <h4><a href="#">First play thourght</a></h4>
-                    <div class="video-details">
-                        <div class="video-channel">Gamer for life</div>
-                        <div class="views-and-post">
-                            <span class="video-views">1.9K views</span>
-                            &bull; 
-                            <span class="video-post">8 hours ago</span>
-                        </div>
-                    </div>
+        <body>
+            <div id="three-columns">
+                <div id="column-1">
+                    <img class="image-1"
+                        src="images/sylphiette.png"
+                        alt="jobless recation sylphiette figure"
+                    >
+                    <h2>
+                        Sylphiette figure
+                    </h2>
+                    <p>
+                        “I'm going to follow you, Rudy.”
+                        From Furyu with sculpting by Moineau comes a 1/7 scale 
+                        figure of Sylphiette from the popular anime Mushoku Tensei:
+                         Jobless Reincarnation! Measuring 6.7", she stands in 
+                         an energetic pose with her hand outstretched, and her
+                         cute design has been faithfully captured in figure form
+                          down to her short green hair, long elf ears, and 
+                          bright, innocent smile. Her outfit has been carefully
+                          sculpted as well down to the texture of the materials
+                          and the wrinkles that emphasize her movement, and each
+                        layer features details, from the way her oversized coat 
+                        flutters to the black strap of her innerwear peeking out 
+                        from under her shirt. Cute from every angle, don't miss 
+                        out on adding her to your collection!
+                    </p>
                 </div>
-                <div class="metube-item">
-                    <div class="image-2">
-                        <img
-                            src="images/vampiremagic.png"
-                            alt="magic vampire"
-                        >
-                    </div>
-                    <h4><a href="#">why you should play magic</a></h4>
-                    <div class="video-details">
-                        <div class="video-channel">Magic101</div>
-                        <div class="views-and-post">
-                            <span class="video-views">1.9K views</span>
-                            &bull; 
-                            <span class="video-post">8 hours ago</span>
-                        </div>
-                    </div>
+                <div id="column-2">
+                    <h3>Product</h3>
+                    <p>
+                    Product Name: Mushoku Tensei: Jobless Reincarnation Sylphiette 1/7 Scale Figure
+
+                    Series: Mushoku Tensei
+                    Manufacturer: Furyu (F:NEX)
+                    Sculptor: Moineau
+                    Specifications: Painted, non-articulated,
+                    1/7 scale PVC & ABS figure
+                    Height (approx.): 170 mm | 6.7"
+                    </p>
+                    <p>
+                        <a href="#section1">Add to cart</a>
+                    </p>
+                    <p>
+                        <a href="#section1">Add to wishlist</a>
+                    </p>
+                    <p>
+                        <a href="#section1">Buy now</a>
+                    </p>
                 </div>
-                <div class="metube-item">
-                    <div class="image-3">
-                        <img
-                            src="images/art.png"
-                            alt="Deluxe-Art-Supplies-Set"
-                        >
-                    </div>
-                    <h4><a href="#">what to you use for art</a></h4>
-                    <div class="video-details">
-                        <div class="video-channel">Artsyfreaks</div>
-                        <div class="views-and-post">
-                            <span class="video-views">1.9K views</span>
-                            &bull; 
-                            <span class="video-post">8 hours ago</span>
+                <div id="column-3">
+                    <h3>More figures</h3>
+                    <p>
+                        <div id="images-2">
+                            <img
+                                src="images/3.png"
+                                alt="chibi sylphiette"
+                            >
+                            <img
+                                src="images/4.png"
+                                alt="Master Roxy"
+                            >
+                            <img
+                                src="images/number 2.png"
+                                alt="silent fits(sylphiette)"
+                            >
                         </div>
-                    </div>
-                </div>
-                <div class="metube-item">
-                    <div class="image-4">
-                        <img
-                        src="images/Screenshot 2024-06-25 074429.png"
-                        alt="music buff"
-                        >
-                    </div>
-                    <h4><a href="#">In or out</a></h4>
-                    <div class="video-details">
-                        <div class="video-channel">Music buff</div>
-                        <div class="views-and-post">
-                            <span class="video-views">1.9K views</span>
-                            &bull; 
-                            <span class="video-post">8 hours ago</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="metube-item">
-                    <div class="image-5">
-                        <img
-                        src="images/mass effect 2.jpg"
-                        alt="mass efcect again"
-                        >
-                    </div>
-                    <h4><a href="#">Part 2</a></h4>
-                    <div class="video-details">
-                        <div class="video-channel">gamerforlife</div>
-                        <div class="views-and-post">
-                            <span class="video-views">1.9K views</span>
-                            &bull; 
-                            <span class="video-post">1 hours ago</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="metube-item">
-                    <div class="image-6">
-                        <img
-                        src="images/Sketchbooks.png"
-                        alt="sketchbook"
-                        >
-                    </div>
-                    <h4><a href="#">Sketchbook tour</a></h4>
-                    <div class="video-details">
-                        <div class="video-channel">Artsyfreaks</div>
-                        <div class="views-and-post">
-                            <span class="video-views">1.9K views</span>
-                            &bull; 
-                            <span class="video-post">2 hours ago</span>
-                        </div>
-                    </div>
+                        Looking for more figures for your Colection please look 
+                        at these.                   
+                    </p>
+                    <h3><a href="#section1">More information</a></h3>
+                    <p>
+                       Looking For more Imformation Click More information
+                       <h3><a href="#section1">More Information</a></h3>
+                    </p>
                 </div>
             </div>
-        </div>
     </body>
 </html>
