--- a/test-for-students/index.html
+++ b/test-for-students/index.html
@@ -3,84 +3,141 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>MeBay-Product-Page</title>
+        <title>Animagram Cards (Exercise)</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link href="css/setup.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
     </head>
-        <body>
-            <div id="three-columns">
-                <div id="column-1">
-                    <img class="image-1"
-                        src="images/sylphiette.png"
-                        alt="jobless recation sylphiette figure"
-                    >
-                    <h2>
-                        Sylphiette figure
-                    </h2>
-                    <p>
-                        “I'm going to follow you, Rudy.”
-                        From Furyu with sculpting by Moineau comes a 1/7 scale 
-                        figure of Sylphiette from the popular anime Mushoku Tensei:
-                         Jobless Reincarnation! Measuring 6.7", she stands in 
-                         an energetic pose with her hand outstretched, and her
-                         cute design has been faithfully captured in figure form
-                          down to her short green hair, long elf ears, and 
-                          bright, innocent smile. Her outfit has been carefully
-                          sculpted as well down to the texture of the materials
-                          and the wrinkles that emphasize her movement, and each
-                        layer features details, from the way her oversized coat 
-                        flutters to the black strap of her innerwear peeking out 
-                        from under her shirt. Cute from every angle, don't miss 
-                        out on adding her to your collection!
-                    </p>
-                </div>
-                <div id="column-2">
-                    <h3>Product</h3>
-                    <p>
-                    Product Name: Mushoku Tensei: Jobless Reincarnation Sylphiette 1/7 Scale Figure
+    <body>
+        <div id="section-2">
+            <div class="card-container">
+                <!--
+                    This is a screenshot of the card style you're aiming for.
+                -->
+                <img 
+                    src="images/animagram-card-0.png" 
+                    alt="example card"
+                    class="example-card"
+                >
 
-                    Series: Mushoku Tensei
-                    Manufacturer: Furyu (F:NEX)
-                    Sculptor: Moineau
-                    Specifications: Painted, non-articulated,
-                    1/7 scale PVC & ABS figure
-                    Height (approx.): 170 mm | 6.7"
-                    </p>
+                <!--
+                    These remaining 4 cards should be styled to match the
+                    example above as closely as possible.
+                -->
+                <div id="animagram-card-1" class="card-style-2">
+                    <div class="animagram-header">
+                        <span class="logo">AG</span>
+                        <span class="brand-name">Animagram</span>
+                    </div>
+                    <div class="profile-pic-container">
+                        <img 
+                            src="images/axolotl.png"
+                            alt="airhead axolotl"
+                        >
+                    </div>
+                    <h2>askalotl</h2>
                     <p>
-                        <a href="#section1">Add to cart</a>
+                        I have my head in the clouds?
+                        I don't get it...I live underwater!
                     </p>
-                    <p>
-                        <a href="#section1">Add to wishlist</a>
-                    </p>
-                    <p>
-                        <a href="#section1">Buy now</a>
-                    </p>
+                    <div class="animagram-footer">
+                        <span>
+                            <i class="fa-solid fa-heart"></i> 108k
+                        </span>
+                        <span>
+                            <i class="fa-regular fa-comment"></i> 86
+                        </span>
+                        <span>
+                            <i class="fa-solid fa-image"></i> 201
+                        </span>
+                    </div>
                 </div>
-                <div id="column-3">
-                    <h3>More figures</h3>
+
+                <div id="animagram-card-2" class="card-style-2">
+                    <div class="animagram-header">
+                        <span class="logo">AG</span>
+                        <span class="brand-name">Animagram</span>
+                    </div>
+                    <div class="profile-pic-container">
+                        <img 
+                            src="images/bunny.png"
+                            alt="overcaffeinated bunny"
+                        >
+                    </div>
+                    <h2>insomniusagi</h2>
                     <p>
-                        <div id="images-2">
-                            <img
-                                src="images/3.png"
-                                alt="chibi sylphiette"
-                            >
-                            <img
-                                src="images/4.png"
-                                alt="Master Roxy"
-                            >
-                            <img
-                                src="images/number 2.png"
-                                alt="silent fits(sylphiette)"
-                            >
-                        </div>
-                        Looking for more figures for your Colection please look 
-                        at these.                   
+                        Can't sleep? Come craft with me. BRING COFFEE PLZ!!!
                     </p>
-                    <h3><a href="#section1">More information</a></h3>
+                    <div class="animagram-footer">
+                        <span>
+                            <i class="fa-solid fa-heart"></i> 12k
+                        </span>
+                        <span>
+                            <i class="fa-regular fa-comment"></i> 317
+                        </span>
+                        <span>
+                            <i class="fa-solid fa-image"></i> 401
+                        </span>
+                    </div>
+                </div>
+                
+                <div id="animagram-card-3" class="card-style-2">
+                    <div class="animagram-header">
+                        <span class="logo">AG</span>
+                        <span class="brand-name">Animagram</span>
+                    </div>
+                    <div class="profile-pic-container">
+                        <img 
+                            src="images/kitten.png"
+                            alt="calm kitten"
+                        >
+                    </div>
+                    <h2>blkcatbakes</h2>
                     <p>
-                       Looking For more Imformation Click More information
-                       <h3><a href="#section1">More Information</a></h3>
+                        Everything always works itself out. 
+                        Just keep kneading...
                     </p>
+                    <div class="animagram-footer">
+                        <span>
+                            <i class="fa-solid fa-heart"></i> 48k
+                        </span>
+                        <span>
+                            <i class="fa-regular fa-comment"></i> 13
+                        </span>
+                        <span>
+                            <i class="fa-solid fa-image"></i> 67
+                        </span>
+                    </div>
+                </div>
+
+                <div id="animagram-card-4" class="card-style-2">
+                    <div class="animagram-header">
+                        <span class="logo">AG</span>
+                        <span class="brand-name">Animagram</span>
+                    </div>
+                    <div class="profile-pic-container">
+                        <img 
+                            src="images/fox.jpg"
+                            alt="frantic fox"
+                        >
+                    </div>
+                    <h2>fabnfranticfx</h2>
+                    <p>
+                        NOW ACCEPTING COMMISSIONS! I'll draw it ALL!
+                    </p>
+                    <div class="animagram-footer">
+                        <span>
+                            <i class="fa-solid fa-heart"></i> 23k
+                        </span>
+                        <span>
+                            <i class="fa-regular fa-comment"></i> 208
+                        </span>
+                        <span>
+                            <i class="fa-solid fa-image"></i> 1.23k
+                        </span>
+                    </div>
                 </div>
             </div>
+        </div>
     </body>
 </html>
