--- a/test-for-students/index.html
+++ b/test-for-students/index.html
@@ -3,23 +3,92 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Themed Gallery Page</title>
         <link href="css/style.css" rel="stylesheet">
     </head>
-    <body>
-        <div id="hero-1">
-            <div class="hero-content">
-
-          
-              <h1>
-                Could be worse. 
-                Not sure how,
-                but it could be.
-              </h1>
-              <h3>So your not at Disney?</h3>
-            </div> 
-        </div>
-            <div class="spacer"></div>
-        
+<body>
+    <div class="background">
+        <div class="image-item">
+            <img 
+                src="alex-lvrs-aX_ljOOyWJY-unsplash.jpg"
+                alt="layered tiramisu"
+            >    
+    <h1>Delicious Desserts</h1>
+        <div class="image-grid">
+            <div class="image-item">
+                <img 
+                    src="anthony-espinosa-6iqpLKqeaE0-unsplash.jpg"
+                    alt="layered tiramisu"
+                >    
+            </div>
+            <div class="image-item">
+                <img 
+                    src="shania-pinnata-Ikd6YJVofEE-unsplash.jpg"
+                    alt="chocolate raspberry fudge"
+                >    
+            </div>
+            <div class="image-item">
+                <img 
+                    src="monika-grabkowska-EbRBhZ-I_p8-unsplash.jpg"
+                    alt="blueberry cheesecake"
+                >    
+            </div>
+            <div class="image-item">
+                <img 
+                    src="chris-c-hzC-esrwd3k-unsplash.jpg"
+                    alt="green frosting vanilla cupcakes"
+                >
+            </div>
+            <div class="image-item">
+                <img 
+                    src="heather-barnes-xatIo9Ksfb0-unsplash.jpg"
+                    alt="dark chocolate filled chocolate 
+                        peanut butter cupcakes"
+                >        
+            </div>
+            <div class="image-item">
+                <img 
+                    src="kobby-mendez-q54Oxq44MZs-unsplash.jpg"
+                    alt="three chocolate glazed spinkled doughnuts"
+                >    
+            </div>
+            <div class="image-item">
+                <img 
+                    src="oliver-timm-haarmann-p6OLZPnq810-unsplash.jpg" 
+                    alt="two fruit topped pastry cookies"
+                >    
+            </div>
+            <div class="image-item">
+                <img 
+                    src="pushpak-dsilva-2UeBOL7UD34-unsplash.jpg"
+                    alt="chocolate brownies with chocolate syrup"
+                >    
+            </div>
+            <div class="image-item">
+                <img 
+                    src="dessy-dimcheva-zyMJwFBg8u8-unsplash.jpg"
+                    alt="three chocolate cupcakes withh vanilla frosting
+                        and a cherry"
+                >        
+            </div>
+            <div class="image-item">
+                <img 
+                    src="leannk-NH2S3zVPMaE-unsplash.jpg"
+                    alt="plain glazed doughnuts"
+                >        
+            </div>
+            <div class="image-item">
+                <img 
+                    src="emile-mbunzama-cLpdEA23Z44-unsplash.jpg"
+                    alt="multilayer chocolate and vanilla dessert 
+                        in glass"
+                >        
+            </div>
+            <div class="image-item">
+                <img 
+                    src="shayna-douglas-Cos4OXJLs14-unsplash.jpg"
+                    alt="three unique doughnuts"
+                >    
+            </div>
     </body>
 </html>
